sửa lỗi khi tối ưu Counter Booking Service va Controller